--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
   "name": "css-reset-and-normalize-sass",
   "description": "A cleaned up combination of Eric Meyer's Reset CSS 2.0 and Nicolas Gallagher's normalize.css with some optional flavor. Sass Version.",
   "authors": [
-    "Michael Gerstmann <>"
+    "Michael Gerstmann @top_webdesign"
   ],
   "license": "MIT",
   "keywords": [
